:rocket: Update content and adding personnal skills

--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
         <div class="content-center">
           <!-- <div class="cc-profile-image"><a href="#"><img src="images/anthony.jpg" alt="Image"/></a></div> -->
           <div class="h2 title">Enzo Lentzy</div>
-          <p class="category text-white">Web and Mobile Developper</p><a class="btn btn-primary" href="#" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Download CV</a>
+          <p class="category text-white">Web and Mobile Developper</p>
+          <a class="btn btn-primary" href="./English_CV.pdf" download="CV_LENTZY" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Download CV</a>
         </div>
       </div>
       <div class="section">
@@ -141,7 +142,7 @@
         </div>
         <div class="row">
           <div class="col-md-6">
-            <div class="progress-container progress-primary"><span class="progress-badge">ReactNative</span>
+            <div class="progress-container progress-primary"><span class="progress-badge">Ionic</span>
               <div class="progress">
                 <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 75%;"></div><span class="progress-value">75%</span>
               </div>
@@ -151,6 +152,61 @@
             <div class="progress-container progress-primary"><span class="progress-badge">GraphQL</span>
               <div class="progress">
                 <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 75%;"></div><span class="progress-value">75%</span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="section" id="personnalSkill">
+      <div class="container">
+        
+        <div class="h4 text-center mb-4 title">Personnal Skills</div>
+        <div class="row justify-content-center">
+          <div class="card w-50 mx-auto" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
+            <div class="card-body">
+              <div class="row justify-content-center">
+                <div class="col-md-11">
+                  <div class="progress-container progress-primary"><span class="progress-badge">Creativity</span>
+                    <div class="progress">
+                      <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 75%;"></div><span class="progress-value">75%</span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="row justify-content-center">
+                <div class="col-md-11">
+                  <div class="progress-container progress-primary"><span class="progress-badge">Rigour</span>
+                    <div class="progress">
+                      <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 85%;"></div><span class="progress-value">85%</span>
+                    </div>
+                  </div>
+                </div>
+              </div><div class="row justify-content-center">
+                <div class="col-md-11">
+                  <div class="progress-container progress-primary"><span class="progress-badge">Humour</span>
+                    <div class="progress">
+                      <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 90%;"></div><span class="progress-value">90%</span>
+                    </div>
+                  </div>
+                </div>
+              </div><div class="row justify-content-center">
+                <div class="col-md-11">
+                  <div class="progress-container progress-primary"><span class="progress-badge">Serious</span>
+                    <div class="progress">
+                      <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 95%;"></div><span class="progress-value">95%</span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="row justify-content-center">
+                <div class="col-md-11">
+                  <div class="progress-container progress-primary"><span class="progress-badge">Problem Solving</span>
+                    <div class="progress">
+                      <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"></div><span class="progress-value">80%</span>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -173,8 +229,9 @@
         </div>
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
-            <div class="h5">Front End Developer</div>
-            <p>Euismod massa scelerisque suspendisse fermentum habitant vitae ullamcorper magna quam iaculis, tristique sapien taciti mollis interdum sagittis libero nunc inceptos tellus, hendrerit vel eleifend primis lectus quisque cubilia sed mauris. Lacinia porta vestibulum diam integer quisque eros pulvinar curae, curabitur feugiat arcu vivamus parturient aliquet laoreet at, eu etiam pretium molestie ultricies sollicitudin dui.</p>
+            <div class="h5">Apprentice - Web and Mobile Developer</div>
+            <p class="category">Chavanod, France</p>
+            <p> I am working at Web Expert Business, a French middle size company in which I'm working as an apprentice on mobile application development with Ionic and VueJS. I also work on some web development through VueJS and a GraphQL API. <br> This is my first professionnal experience as a developper in computer sciences that allowed me to step-up my skills in project managment and development. </p>
           </div>
         </div>
       </div>
@@ -189,8 +246,9 @@
         </div>
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
-            <div class="h5">Web Developer</div>
-            <p>Euismod massa scelerisque suspendisse fermentum habitant vitae ullamcorper magna quam iaculis, tristique sapien taciti mollis interdum sagittis libero nunc inceptos tellus, hendrerit vel eleifend primis lectus quisque cubilia sed mauris. Lacinia porta vestibulum diam integer quisque eros pulvinar curae, curabitur feugiat arcu vivamus parturient aliquet laoreet at, eu etiam pretium molestie ultricies sollicitudin dui.</p>
+            <div class="h5">Apprentice - Electrical Technician </div>
+            <p class="category">La Garde, France</p>
+            <p>I worked at ECA Group, a French large size company in which I used to work as an apprentice in electronic board testing. These boards were used in submarines for mines war and it learned me to be rigorous in my work. It was also my first professional working experience that learned me a lot around the machinery of a company and how does it works. </p>
           </div>
         </div>
       </div>
@@ -212,7 +270,7 @@
           <div class="card-body">
             <div class="h5">LP DIM (multi-platform development)</div>
             <p class="category">University of Savoy, France</p>
-            <p>Euismod massa scelerisque suspendisse fermentum habitant vitae ullamcorper magna quam iaculis, tristique sapien taciti mollis interdum sagittis libero nunc inceptos tellus, hendrerit vel eleifend primis lectus quisque cubilia sed mauris. Lacinia porta vestibulum diam integer quisque eros pulvinar curae, curabitur feugiat arcu vivamus parturient aliquet laoreet at, eu etiam pretium molestie ultricies sollicitudin dui.</p>
+            <p>French one year diploma in which I continued to learn a lot in computer science. I realised many projects that increased my teamwork experience, but also showed me how to have cleaner code when I develop applications. This was for me the first year I really learn advanced project development in computer science and I really liked it !</p>
           </div>
         </div>
       </div>
@@ -229,7 +287,7 @@
           <div class="card-body">
             <div class="h5">DUT GEII (Electricity and industrial informatic development)</div>
             <p class="category">University of Toulon, France</p>
-            <p>Euismod massa scelerisque suspendisse fermentum habitant vitae ullamcorper magna quam iaculis, tristique sapien taciti mollis interdum sagittis libero nunc inceptos tellus, hendrerit vel eleifend primis lectus quisque cubilia sed mauris. Lacinia porta vestibulum diam integer quisque eros pulvinar curae, curabitur feugiat arcu vivamus parturient aliquet laoreet at, eu etiam pretium molestie ultricies sollicitudin dui.</p>
+            <p>French two year diploma in which I learned a lot of basis around electrical, electronic and informatic skills. In this course I also learned to build some project and teamworking. I made some project with robots that allied electronic and informatic, which decided me to continue in computer sciences. </p>
           </div>
         </div>
       </div>
@@ -246,7 +304,7 @@
           <div class="card-body">
             <div class="h5">French Baccalaureate in Ingeenering and Computer Sciences with honors</div>
             <p class="category">School of Costebelle, France</p>
-            <p>Euismod massa scelerisque suspendisse fermentum habitant vitae ullamcorper magna quam iaculis, tristique sapien taciti mollis interdum sagittis libero nunc inceptos tellus, hendrerit vel eleifend primis lectus quisque cubilia sed mauris. Lacinia porta vestibulum diam integer quisque eros pulvinar curae, curabitur feugiat arcu vivamus parturient aliquet laoreet at, eu etiam pretium molestie ultricies sollicitudin dui.</p>
+            <p>French Baccalaureate in which I was in ingenior speciality and english european class.</p>
           </div>
         </div>
       </div>
@@ -271,37 +329,24 @@
       <div class="tab-pane active" id="web-development">
         <div class="ml-auto mr-auto">
           <div class="row">
-            <!-- <div class="col-md-6"> -->
-              <!-- <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#web-development">
-                  <figure class="cc-effect"><img src="images/project-1.jpg" alt="Image"/>
+            <div class="col-md-6">
+              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="https://github.com/Enzo-ltz/MotoJS" target="_blank">
+                  <figure class="cc-effect"><img src="images/project-1.png" alt="Image"/>
                     <figcaption>
-                      <div class="h4">Recent Project</div>
-                      <p>Web Development</p>
+                      <div class="h4">La Pistonnerie</div>
+                      <p>VueJS</p>
                     </figcaption>
                   </figure></a></div>
-              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#web-development">
-                  <figure class="cc-effect"><img src="images/project-2.jpg" alt="Image"/>
-                    <figcaption>
-                      <div class="h4">Startup Project</div>
-                      <p>Web Development</p>
-                    </figcaption>
-                  </figure></a></div>
+              
             </div>
             <div class="col-md-6">
-              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#web-development">
-                  <figure class="cc-effect"><img src="images/project-3.jpg" alt="Image"/>
-                    <figcaption>
-                      <div class="h4">Food Order Project</div>
-                      <p>Web Development</p>
-                    </figcaption>
-                  </figure></a></div> -->
-              <div class="cc-porfolio-image img-raised mx-auto" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#web-development">
-                  <figure class="cc-effect"><img src="images/project-4.jpg" alt="Image"/>
-                    <figcaption>
-                      <div class="h4">Web Advertising Project</div>
-                      <p>Web Development</p>
-                    </figcaption>
-                  </figure></a></div>
+              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="https://github.com/Enzo-ltz/LaGamonerie" target="_blank">
+                <figure class="cc-effect"><img src="images/project-2.jpg" alt="Image"/>
+                  <figcaption>
+                    <div class="h4">La Gamonerie</div>
+                    <p>PHP Symfony</p>
+                  </figcaption>
+                </figure></a></div>
             </div>
           </div>
         </div>
