:memo: updating descriptions

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <div class="col-lg-6 col-md-12">
           <div class="card-body">
             <div class="h4 mt-0 title">About</div>
-            <p>Hello and welcome on my site ! My name is Enzo Lentzy and I am an apprentice web and mobile application developper.</p>
+            <p>Hello and welcome to my website ! My name is Enzo Lentzy and I am an apprentice web and mobile application developper.</p>
             <p>I love programming either web or mobile application through new technologies and frameworks. As well I am a musician and a biker ! I am joyfull, sociable and meticulous on my works.</p>
             <p>On this site you can learn all about me. You can either see my skills or my work experience, and you might soon see all my projects ! I wish you a good time here !</p>
           </div>
@@ -161,7 +161,7 @@
     <div class="section" id="personnalSkill">
       <div class="container">
         
-        <div class="h4 text-center mb-4 title">Personnal Skills</div>
+        <div class="h4 text-center mb-4 title">Personal Skills</div>
         <div class="row justify-content-center">
           <div class="card w-50 mx-auto" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
             <div class="card-body">
@@ -334,7 +334,8 @@
                   <figure class="cc-effect"><img src="images/project-1.png" alt="Image"/>
                     <figcaption>
                       <div class="h4">La Pistonnerie</div>
-                      <p>VueJS</p>
+                      <p>VueJS</p> <br>
+                      <p>Project made for school in which you can search motobikes and find technical descriptions</p>
                     </figcaption>
                   </figure></a></div>
               
@@ -344,7 +345,8 @@
                 <figure class="cc-effect"><img src="images/project-2.jpg" alt="Image"/>
                   <figcaption>
                     <div class="h4">La Gamonerie</div>
-                    <p>PHP Symfony</p>
+                    <p>PHP Symfony</p> <br>
+                    <p>Project made for school  in which you can search some video games and find players that are interested in one game to play with him</p>
                   </figcaption>
                 </figure></a></div>
             </div>
